--- a/example/example.plant.config.yaml
+++ b/example/example.plant.config.yaml
@@ -62,7 +62,9 @@ gene_anno: /home/xfu/Gmatic5/genome/tair10/tair10_gene_anno.tsv
 
 IGV: /home/xfu/igv/genomes/tair10.genome
 
-fold_change: 1.5
+fold_change: 
+  - 1.5
+  - 2
 
 
 AS: /home/xfu/Gmatic5/genome/tair10/ASTA/gencode_astalavista.bed
