--- a/example/example.plant.config.yaml
+++ b/example/example.plant.config.yaml
@@ -60,6 +60,8 @@ bed: /home/xfu/Gmatic5/genome/tair10/tair10_gene.bed
 
 gene_anno: /home/xfu/Gmatic5/genome/tair10/tair10_gene_anno.tsv
 
+gene_length: ./script/tair10_merged_exons_length.tsv
+
 IGV: /home/xfu/igv/genomes/tair10.genome
 
 fold_change: 
