--- a/example/example.plant.config.yaml
+++ b/example/example.plant.config.yaml
@@ -5,6 +5,7 @@ seq_info:
   stranded: yes
   mode: PE
   replicate: 3
+  #replicate: 3+4+3+3 (if the number of replicates are different for each sample)
 
 path: /home/xfu/Project/Rosa/RNA-Seq/fastq/
 
